# neuralgas

./: CMakeLists.txt  DataGenerator.layout  Makefile.win  NeuralGas.h  NeuralGasSuite.dev  NeuralGasSuite.h  NeuralGasSuite.layout  README  mainNGSuite.cpp
DataGenerator/: BinaryAutomata.h  DataGenerator.dev  DataGenerator.h  GaussianNoise.h  MackeyGlass.dev  MackeyGlass.h  Makefile.win  NoisyAutomata.h  ProbMackeyGlass.h  mainBinaryAutomata.cpp  mainGaussianNoise.cpp  mainGenerateData.cpp  mainMackeyGlass.cpp  mainNoisyAutomata.cpp  mainProbMackeyGlass.cpp
Graphs/: Base_Graph.h  DGraph.h  Graphs.dev  Graphs.layout  Makefile.win  TGraph.h  UGraph.h  Vector.dev  Vector.h  Vector.layout  Vector_temp.h  Vector_temp_easy.h  main.cpp  mainVector.cpp
GrowingNeuralGas/: CMakeLists.txt  GNGAlgorithm.h  GNGGraph.h  GNGModul.dev  GNGModul.h  GNGModulGraph.h  GrowingNeuralGas.dev  Makefile.win  mainGNG.cpp  mainGNGModul.cpp
GrowingNeuralGas/ErrorBasedGNGAlgorithm/: EBGNGAlgorithm.h  ErrorBasedGNGAlgorithm.dev  Makefile.win  mainEBGNG.cpp
GrowingNeuralGas/LifelongBasedGNGAlgorithm/: LLBGNGAlgorithm.h  LLBGNGGraph.h  mainLLBGNG.cpp
GrowingNeuralGas/LifelongRobustGNGAlgorithm/: ActiveLLRGNGAlgorithm.h  LLRGNGAlgorithm.h  LLRGNGGraph.h  mainActiveLLRGNG.cpp  mainLLRGNG.cpp
GrowingNeuralGas/MergeGrowingNeuralGas/: CDNAlgorithm.h  CDNmain.cpp  CoolDownNetwork.dev  MGNGAlgorithm.h  MGNGGraph.h  MGNGmain.cpp  Makefile.win  MergeGrowingNeuralGas.dev
GrowingNeuralGas/Testing/: ErrorTesting.dev  ErrorTesting.h  Makefile.win  mainTesting.cpp
VoronoiDiagramm/: Voronoi.cpp  Voronoi.h  VoronoiDiagramGenerator.cpp  VoronoiDiagramGenerator.h  VoronoiDiagramm.pro  VoronoiWidget.cpp  VoronoiWidget.h  calc_mse.cpp  main.cpp  mainVoronoiWidget.cpp  test_data.txt
cmake/: CMakeLists.txt
doc/: Doxyfile
include/MGNG/: MGNGAlgorithm.h  MGNGGraph.h
include/NeuralGas/: Base_Graph.h  DGraph.h  NeuralGas.h  TGraph.h  UGraph.h  Vector.h
src/tests/: main_test.cpp
tools/: helpers.h  math_helpers.h  metrics.h
