SET(GNG ${NEURALGAS_ROOT}/GrowingNeuralGas CACHE PATH "Path prefix for NeuralGas include")

INCLUDE_DIRECTORIES(${GNG})

SET(SOURCES
	${GNG}/GNGAlgorithm.h
)

SET(MAIN_GNG
  ${GNG}/mainGNG.cpp
)

# NeuralGas library
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})
INSTALL(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)

ADD_EXECUTABLE(mainGNG ${MAIN_GNG})

INSTALL(TARGETS mainGNG RUNTIME DESTINATION bin/NeuralGas)
